remove hyperlinks text, fixed text align center on footer section

--- a/css/style.css
+++ b/css/style.css
@@ -887,7 +887,7 @@ footer {
 
 .footer2 a {
   text-decoration: none;
-  color: #ccc;
+  color: var(--text-light);
   transition: 0.3s;
 }
 
@@ -899,6 +899,7 @@ footer {
 .footer3 div {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
   margin-bottom: 0.7rem;
 }
@@ -1370,7 +1371,7 @@ footer {
   .footer-container {
     grid-template-columns: 1fr;
     text-align: center;
-    gap: 1rem;
+    gap: 2rem;
   }
 
   .footer3 div {
